apps/raw/test/payments-backend-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neon-billboard
  namespace: payments-backend-test
  labels:
    app.kubernetes.io/name: neon-billboard
    naas.io/team: payments
    naas.io/env: test
spec:
  selector:
    app.kubernetes.io/name: neon-billboard
  ports:
    - port: 80
      targetPort: 8080
